--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.AppTorneosAjedrez"
         tools:targetApi="31">
         <activity
+            android:name=".ui.mapa.MapaActivity"
+            android:theme="@style/Theme.AppTorneosAjedrez"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppTorneosAjedrez.NoActionBar">
