--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
             android:exported="true" />
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.Material3.Light.NoActionBar"
+        />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
