--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppTorneosAjedrez.NoActionBar" />
+
+        <activity android:name=".ui.fixture.FixtureActivity" />
+
     </application>
 
 </manifest>
